[package]
name = "msts-rs"
version = "0.1.0"
authors = ["ashcon"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compress="0.2.1" # Zlib compression extraction
byteorder="1.3.4" # Binary file reading
image="0.23.13" # Loading images from ACE into easy format
nom = "6.1.2" # File processing (ASCII MSTS files)

gl = "0.14.0" # OpenGL 
sdl2 = { version = "0.34.2", features = ["bundled", "static-link"] } # SDL2
